--- a/Libreria/core/templates/core/home.html
+++ b/Libreria/core/templates/core/home.html
@@ -14,7 +14,7 @@
             <span class="section-heading-upper">Libreria</span>
             <span class="section-heading-lower">libros</span>
           </h2>
-          <p class="mb-3">Ver opiniones
+          <p class="mb-3"><a href="{% url 'listado' %}">Ver opiniones</a> 
           </p>
          
         </div>
@@ -34,7 +34,7 @@
                 <span class="section-heading-upper">"La imaginación comienza con una página"</span>
                 <span class="section-heading-lower">Listado de libros</span>
               </h2>
-              <p class="mb-0">Más aquí.</p>
+              <p class="mb-0"><a href="{% url 'listado' %}">Más aquí</a></p>
             </div>
           </div>
         </div>
