Creamos el CRUD del formulario de critica

--- a/Libreria/core/templates/core/base.html
+++ b/Libreria/core/templates/core/base.html
@@ -47,7 +47,7 @@
             <a class="nav-link text-uppercase text-expanded" href="{% url 'libros' %}">Libros</a>
           </li>
           <li class="nav-item {% if request.path == '/critica/' %}active{% endif %} px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="{% url 'critica' %}">Critica</a>
+            <a class="nav-link text-uppercase text-expanded" href="{% url 'critica:critica' %}">Critica</a>
           </li>
         </ul>
       </div>
