--- a/Libreria/core/templates/core/base.html
+++ b/Libreria/core/templates/core/base.html
@@ -2,7 +2,14 @@
 
 <head>
 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Aplicación web de gestión de libros y críticas literarias">
+    <title>Biblioteca - Gestión de Libros</title>
+
     {% load static %}
+    <!-- favicon -->
+    <link rel="icon" href="{% static 'core/favicon.ico' %}" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link href="{% static 'core/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -28,6 +35,7 @@
         
       </div>
 
+
       <div style="text-align: right; margin-right: 100px; color: white;">
         {% if user.is_authenticated %}
           Hola {{user.username}} &nbsp; &nbsp; <a href="{% url 'cerrar_sesion' %}" style="color: white;">Cerrar sesión</a>
@@ -40,14 +48,26 @@
  <!-- Navbar -->
  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="{% url 'Home' %}">Libros</a>
+      <!-- MENSAJES DE CONFIRMACIÓN O ERROR -->
+      <div class="container-messages">
+        {% if messages %}
+          <ul class="messages">
+            {% for message in messages %}
+              <li{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+                {{ message }}
+              </li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </div>
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="{% url 'core:home' %}">Libros</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item {% if request.path == '/' %}active{% endif %} px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="{% url 'Home' %}">Inicio</a>
+            <a class="nav-link text-uppercase text-expanded" href="{% url 'core:home' %}">Inicio</a>
           </li>
           <li class="nav-item {% if request.path == '/listado/' %}active{% endif %} px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="{% url 'listado' %}">Listado libros</a>
@@ -105,6 +125,25 @@
     <script src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
+    <!-- Para que desaparezcan los mensajes, poco a poco -->
+    <script>
+      // Busca todos los elementos con clase 'alert'
+      document.addEventListener("DOMContentLoaded", function () {
+        var alerts = document.querySelectorAll(".alert");
+    
+        alerts.forEach(function (alert) {
+          // Hacer que desaparezcan después de 5 segundos (5000 ms)
+          setTimeout(function () {
+            alert.style.transition = "opacity 0.5s ease";
+            alert.style.opacity = "0";
+    
+            setTimeout(function () {
+              alert.remove();
+            }, 500); // Tiempo de la transición
+          }, 5000);
+        });
+      });
+    </script>
 </body>
 
 
