--- a/Libreria/critica/templates/critica/formulario.html
+++ b/Libreria/critica/templates/critica/formulario.html
@@ -95,6 +95,7 @@
 </style>
 <div class="container-form">
   <h1>Editar Crítica</h1>
+  <p><strong>Libro:</strong> {{ titulo_libro }}</p>
   <div style="display: flex; gap: 15px; justify-content: flex-end; vertical-align: top">
     <form method="post">
       {% csrf_token %}
